--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,7 @@ SECRET_KEY="django-insecure-lp6h18zq4@z30symy*oz)+hp^uoti48r_ix^qc-m@&yfxd7&hn"
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 CSRF_TRUSTED_ORIGINS=http://localhost:4200,http://127.0.0.1:4200
+FRONTEND_URL=your_frontend_url
 
 DB_NAME=your_database_name
 DB_USER=your_database_user
